fix: gap

--- a/src/components/app/Container/Side/index.css
+++ b/src/components/app/Container/Side/index.css
@@ -1,5 +1,5 @@
 .Side {
-  width: 260px;
+  width: 240px;
 }
 
 .Side > div {
