--- a/src/components/app/Toc/index.css
+++ b/src/components/app/Toc/index.css
@@ -1,5 +1,5 @@
 .Toc-Wrap {
-  margin-left: 5%;
+  margin-left: 2%;
   align-self: stretch;
 }
 
