--- a/src/styles/md/github-markdown.css
+++ b/src/styles/md/github-markdown.css
@@ -739,7 +739,7 @@ html[theme='dark'] {
   padding: 48px 8px 8px 12px;
   margin: 8px 0;
   overflow-x: scroll;
-  line-height: 1.25;
+  line-height: 1.45;
   font-size: 115%;
   color: var(--color-fg-default);
   background-color: var(--color-canvas-subtle);
